cat-deployments/catool-ui/catool-ui-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: catool-ui
  labels:
    name: catool-ui
