cat-deployments/catool-ui/catool-ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catool-ui-deployment
  namespace: catool-ui
  labels:
    app: catool-ui
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: catool-ui
  template:
    metadata:
      labels:
        app: catool-ui
    spec:
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      tolerations:
      - key: "node.kubernetes.io/disk-pressure"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
      - name: catool-ui
        image: 132.186.17.22:5000/catool-ui:1-1-1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: catool-ui-config-volume
          mountPath: /usr/share/nginx/html/config.js
          subPath: config.js
      volumes:
      - name: catool-ui-config-volume
        configMap:
          name: catool-ui-config
